[metadata]
name = selanneal
version = 0.0.4
author = Paul Feichtinger
author_email = paul.feichtinger@oeaw.ac.at
description = multidimensional selection optimisation with simulated annealing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feichtip/selanneal
license = MIT
keywords = hep physics cut selection optimisation annealing
project_urls =
    Source = https://github.com/feichtip/selanneal
    Tracker = https://github.com/feichtip/selanneal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.18.0
    numba>=0.53.0

[options.packages.find]
where = src
